--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
+body{
+  background-color: rgb(145, 179, 209);
+}
+.userTable {
+  width: 60%;
+  margin: 50px auto;
+  background-color: rgb(205, 230, 224);
+  padding: 50px;
+  border-radius: 10px;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.065);
+}
+.userTable table {
+  width: 100%;
+  margin-top: 30px;
+}
+
+.userTable h3{
+  text-align: center;
+  margin-bottom: 30px;
+  font-weight: bold;
+  color: darkcyan;
+  text-transform: capitalize;  
+}
+
+.userTable input{
+  margin: 10px;
+  padding: 5px;
+  width: 80%;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.userTable .input-div button{
+  margin: 2px;
+  padding: 5px;
+  width: 15%;
+  border-radius: 10px;
+}
+
+
+.userTable table thead th {
+  background-color: darkcyan;
+  color: white;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.userTable table tbody td {
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.actionButtons button {
+  margin: 0 10px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.actionButtons text {
+  color: black;
 }
