--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ body{
   margin-top: 30px;
 }
 
+.course-image {
+  width: 40px; /* Adjust the size as needed */
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover; /* Ensure the image covers the circular area */
+}
+
 .userTable h3{
   text-align: center;
   margin-bottom: 30px;
@@ -55,4 +62,32 @@ body{
 }
 .actionButtons text {
   color: black;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+.pagination-button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+.pagination-text {
+  margin: 0 10px;
+  font-size: 18px;
 }
