--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,18 @@ body{
   border-radius: 10px;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.065);
 }
+
+.no-underline {
+  text-decoration: none;
+}
+
 .userTable table {
   width: 100%;
   margin-top: 30px;
 }
-
+.error{
+  color: red;
+}
 .course-image {
   width: 40px; /* Adjust the size as needed */
   height: 40px;
